# tv-agent

./: .env.example  README.md  auto.py  config.json  main.py  pyproject.toml  test_volume.py  tools.json
agent_tools/: get_key.py  get_platform.py  get_recommendations.py  get_youtube_link.py  get_youtube_query.py  planner.py  send_key.py  send_link.py  set_show.py
androidtv_remote_certs/: client.crt  client.key
model/: groq_model.py
setup/: test.py  test2.py
